--- a/v3-parent/src/style.css
+++ b/v3-parent/src/style.css
@@ -1,4 +1,14 @@
-:root {
+html, body {
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+}
+
+#app {
+  height: 100%;
+}
+
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -86,4 +96,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
